# misc_scope

./: CMakeLists.txt
src/: sugar.cmake
src/axpy/: cblas.cpp  sugar.cmake
src/coherence/: sugar.cmake
src/conv/: cudnn.cpp  sugar.cmake
src/gemm/: cblas.cpp  cublas.cpp  cuda.cu  sugar.cmake
src/launch/: cuda.cu  sugar.cmake
src/lock/: lock.cpp  sugar.cmake
src/vectoradd/: cuda.cu  sugar.cmake
